--- a/config.cfg
+++ b/config.cfg
@@ -44,7 +44,7 @@
 % close the <main> element started in \Configure{crosslinks+}
 \Configure{@/BODY}{\ifvmode\IgnorePar\fi\EndP\HCode{</main>}}
 % Goatcounter counting
-\Configure{@/BODY}{\HCode{<script data-goatcounter="https://kodymirus.goatcounter.com/count" async src="/js/libs/goatcounter.js"></script>\Hnewline }}
+%\Configure{@/BODY}{\HCode{<script data-goatcounter="https://kodymirus.goatcounter.com/count" async src="/js/libs/goatcounter.js"></script>\Hnewline }}
 
 % show only crosslinks to prev, main and next pages
 \Configure{crosslinks*}{prev}{up}{next}{}
