--- a/config.cfg
+++ b/config.cfg
@@ -17,7 +17,7 @@
 \Configure{AddCss}{style.css}
 
 % Declare graphics extensions
-\DeclareGraphicsExtensions{.svg,.png,.jpg}
+% \DeclareGraphicsExtensions{.svg,.png,.jpg}
 
 \makeatletter 
 \ExplSyntaxOn 
