--- a/config.cfg
+++ b/config.cfg
@@ -19,11 +19,11 @@
 % Declare graphics extensions
 % \DeclareGraphicsExtensions{.svg,.png,.jpg}
 
-\makeatletter 
-\ExplSyntaxOn 
-\Configure{Gin-dim}{style="width:\fp_eval:n{round(\Gin@req@width/\textwidth*100,2)}\%"}
-\ExplSyntaxOff
-\makeatother
+% \makeatletter 
+% \ExplSyntaxOn 
+% \Configure{Gin-dim}{style="width:\fp_eval:n{round(\Gin@req@width/\textwidth*100,2)}\%"}
+% \ExplSyntaxOff
+% \makeatother
 
 
 % Mini TOC
