--- a/config.cfg
+++ b/config.cfg
@@ -60,7 +60,7 @@
 \Configure{verb}{\HCode{<code class="verb">}\NoFonts}{\EndNoFonts\HCode{</code>}}
 \ConfigureEnv{texsource}{\BlockElementStart{codesample}{class="texsource"}\NoFonts\fontencoding{OT1}}{\EndNoFonts\BlockElementEnd{codesample}{}}{}{}
 \ConfigureEnv{shellcommand}{\BlockElementStart{codesample}{class="shellcommand"}\NoFonts\fontencoding{OT1}}{\EndNoFonts\BlockElementEnd{codesample}{}}{}{}
-\ConfigureEnv{htmlsource}{\BlockElementStart{codesample}{class="htmlsource"}\NoFonts\fontencoding{OT1}}{\EndNoFonts\BlockElementEnd{codesample}{}}{}{}
+% \ConfigureEnv{htmlsource}{\BlockElementStart{codesample}{class="htmlsource"}\NoFonts\fontencoding{OT1}}{\EndNoFonts\BlockElementEnd{codesample}{}}{}{}
 \ConfigureEnv{luasource}{\BlockElementStart{codesample}{class="luasource"}\NoFonts\fontencoding{OT1}}{\EndNoFonts\BlockElementEnd{codesample}{}}{}{}
 \ConfigureEnv{textsource}{\BlockElementStart{codesample}{class="textsource"}\NoFonts\fontencoding{OT1}}{\EndNoFonts\BlockElementEnd{codesample}{}}{}{}
 
