--- a/config.cfg
+++ b/config.cfg
@@ -64,7 +64,7 @@
 \ConfigureEnv{luasource}{\BlockElementStart{codesample}{class="luasource"}\NoFonts\fontencoding{OT1}}{\EndNoFonts\BlockElementEnd{codesample}{}}{}{}
 \ConfigureEnv{textsource}{\BlockElementStart{codesample}{class="textsource"}\NoFonts\fontencoding{OT1}}{\EndNoFonts\BlockElementEnd{codesample}{}}{}{}
 
-\Configure{htmlinput}{\BlockElementStart{codesample}{class="htmlsource"}}{\BlockElementEnd{codesample}{}}
+% \Configure{htmlinput}{\BlockElementStart{codesample}{class="htmlsource"}}{\BlockElementEnd{codesample}{}}
 \Configure{texinput}{\BlockElementStart{codesample}{class="texsource"}}{\BlockElementEnd{codesample}{}}
 
 \ConfigureEnv{acknowledgements}{\BlockElementStart{acknowledgements}{}}{\BlockElementEnd{acknowledgements}{}}{}{}
