--- a/config.cfg
+++ b/config.cfg
@@ -65,7 +65,7 @@
 \ConfigureEnv{textsource}{\BlockElementStart{codesample}{class="textsource"}\NoFonts\fontencoding{OT1}}{\EndNoFonts\BlockElementEnd{codesample}{}}{}{}
 
 % \Configure{htmlinput}{\BlockElementStart{codesample}{class="htmlsource"}}{\BlockElementEnd{codesample}{}}
-\Configure{texinput}{\BlockElementStart{codesample}{class="texsource"}}{\BlockElementEnd{codesample}{}}
+% \Configure{texinput}{\BlockElementStart{codesample}{class="texsource"}}{\BlockElementEnd{codesample}{}}
 
 \ConfigureEnv{acknowledgements}{\BlockElementStart{acknowledgements}{}}{\BlockElementEnd{acknowledgements}{}}{}{}
 \ConfigureEnv{warning}{\BlockElementStart{warning}{}}{\BlockElementEnd{warning}{}}{}{}
