--- a/config.cfg
+++ b/config.cfg
@@ -26,6 +26,10 @@
 % \makeatother
 
 
+\Configure{HEAD}
+{\IgnorePar\EndP\HCode{<header>\Hnewline}\IgnorePar}
+{\IgnorePar\HCode{</header>\Hnewline}\ShowPar}
+
 % Mini TOC
 \Configure{crosslinks+}{%
   \bgroup
